--- a/pom.xml
+++ b/pom.xml
@@ -73,6 +73,13 @@
             <version>5.8.0.M3</version>
         </dependency>
 
+        <!--JWT-->
+        <dependency>
+            <groupId>io.jsonwebtoken</groupId>
+            <artifactId>jjwt</artifactId>
+            <version>0.9.1</version>
+        </dependency>
+
     </dependencies>
     <dependencyManagement>
         <dependencies>
